scenarios/multicluster/duplicated_control_plane_scenario/addons_vs.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: addons-gw
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - '*'
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: kiali
  namespace: istio-system
spec:
  gateways: 
    - addons-gw
  hosts: 
    - '*'
  http:
  - match:
    - uri:
        prefix: /kiali/
    rewrite:
      uri: /kiali/
    route:
    - destination:
        host: kiali.istio-system.svc.cluster.local
        port:
          number: 20001
  #       subset: primary
  # - match:
  #   - uri:
  #       prefix: /kiali-secondary/
  #   route:
  #   - destination:
  #       host: kiali.istio-system.svc.cluster.local
  #       port:
  #         number: 20001
  #       subset: secondary
---
apiVersion: 'networking.istio.io/v1alpha3'
kind: DestinationRule
metadata:
  name: kiali
  namespace: istio-system
spec:
  host: kiali.istio-system.svc.cluster.local
  trafficPolicy:
    tls:
      mode: DISABLE
  # subsets:
  # - name: primary
  #   labels:
  #     cl: "primary"
  # - name: secondary
  #   labels:
  #     cl: "secondary"
